--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "candle-crf"
 version = "0.7.2"
 edition = "2021"
+description = "porting pytorch-crf to candle"
+readme = "README.md"
+repository = "https://github.com/kigichang/candle-crf"
 
 [dependencies]
 candle-core = { git = "https://github.com/huggingface/candle" }
