--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 description = "porting pytorch-crf to candle"
 readme = "README.md"
 repository = "https://github.com/kigichang/candle-crf"
+license = "MIT"
+license-file = "LICENSE"
+keywords = ["candle", "crf", "conditional random field", "pytorch"]
 
 [dependencies]
 candle-core = { git = "https://github.com/huggingface/candle" }
