build: add candle version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ license-file = "LICENSE"
 keywords = ["candle", "crf", "conditional random field", "pytorch"]
 
 [dependencies]
-candle-core = { git = "https://github.com/huggingface/candle" }
-candle-nn = { git = "https://github.com/huggingface/candle" }
+candle-core = { git = "https://github.com/huggingface/candle", version = "0.6.0"}
+candle-nn = { git = "https://github.com/huggingface/candle", version = "0.6.0" }
 
 [dev-dependencies]
 itertools = "0.13.0"
