refactor: change default type to f32 from f64

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "candle-crf"
-version = "0.7.2"
+version = "0.7.3"
 edition = "2021"
 description = "porting pytorch-crf to candle"
 readme = "README.md"
 repository = "https://github.com/kigichang/candle-crf"
-license = "MIT"
 license-file = "LICENSE"
 keywords = ["candle", "crf", "pytorch"]
 
 [dependencies]
-candle-core = { git = "https://github.com/huggingface/candle", version = "0.6.0"}
-candle-nn = { git = "https://github.com/huggingface/candle", version = "0.6.0" }
+candle-core = "0.6.0"
+candle-nn = "0.6.0"
 
 [dev-dependencies]
 itertools = "0.13.0"
