--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ license-file = "LICENSE"
 keywords = ["candle", "crf", "pytorch"]
 
 [dependencies]
-accelerate-src = { version = "0.3.2", optional = true }
-intel-mkl-src = { version = "0.8.1", optional = true }
-candle-core = "0.6.0"
-candle-nn = "0.6.0"
+accelerate-src = { workspace = true, optional = true }
+intel-mkl-src = { workspace = true, optional = true }
+candle-core = { workspace = true }
+candle-nn = { workspace = true }
 
 
 [dev-dependencies]
